--- a/i_talks.html
+++ b/i_talks.html
@@ -50,41 +50,17 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+<a href="https://groups.oist.jp/mlss">MLSS 2024</a> The Machine Learning Summer School, Okinawa, Japan, March 4-15, 2024 (invited talk)
+</p>
+
+<p>
 <a href="https://nips.cc/Conferences/2023">NeurIPS 2023</a> Workshop on Federated Learning in the Age of Foundation Models (subject to the workshop being accepted), New Orleans, Louisiana, USA, December 15-16, 2023 (plenary talk)
 </p>
 
-<p>
+<!-- <p>
 <a href=verb"http://lsec.cc.ac.cn/~icnonla23/index.html">The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA)</a>, Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
 </p>
-
-<p>
-<a href="https://icml.cc/Conferences/2023/Dates">ICML 2023</a>, Honolulu, Oahu, Hawaii, USA, July 23-29, 2023
-</p>
-
-<p>
-<a href="https://simons.berkeley.edu/workshops/federated-collaborative-learning/schedule">Federated and Collaborative Learning Workshop</a>, Simons Institute, Berkeley, USA, July 19-20, 2023 (invited by John Duchi, Nika Haghtalab, Peter Kairouz, Virginia Smith, Nati Srebro, and Kunal Talwar)
-</p>
-
-<p>
-<a href="https://www.eeml.eu/home">Eastern European Machine Learning Summer School (EEML 2023)</a>, Kosice, Slovakia, July 9-16, 2023 (lecturer)
-</p>
-
-<p>
-<a href="http://mathconf.sci.am/">Mathematics in Armenia: Advances and Perspectives</a> (80th anniversary of the foundation of the Armenian National Academy of Sciences), Yerevan, Armenia, July 2-8, 2023 (plenary)
-</p>
-
-<p>
-Research Seminar, Institute for Informatics, Slovak Academy of Sciences, Bratislava, Slovakia, May 26, 2023 
-</p>
-
-
-
-<!--
-<p>
-<a href="http://aistats.org/aistats2023/">AISTATS 2023</a>, Valencia, Spain, April 25-27, 2023
-</p>
 !-->
-
 
 
 <!-- <p>
@@ -95,8 +71,33 @@ Research Seminar, Institute for Informatics, Slovak Academy of Sciences, Bratisl
 <h1>2023 Talks</h1>
 
 <p>
+[232]
+<a href="https://icml.cc/Conferences/2023/Dates">ICML 2023</a>, Honolulu, Oahu, Hawaii, USA, July 23-29, 2023
+</p>
+
+<p>
+[231]
+<a href="https://simons.berkeley.edu/workshops/federated-collaborative-learning/schedule">Federated and Collaborative Learning Workshop</a>, Simons Institute, Berkeley, USA, July 19-20, 2023 (invited by John Duchi, Nika Haghtalab, Peter Kairouz, Virginia Smith, Nati Srebro, and Kunal Talwar)
+</p>
+
+<p>
+[230]
+<a href="https://www.eeml.eu/home">Eastern European Machine Learning Summer School (EEML 2023)</a>, Košice, Slovakia, July 9-16, 2023 (lecturer)
+</p>
+
+<p>
+[229]
+<a href="http://mathconf.sci.am/">Mathematics in Armenia: Advances and Perspectives</a> (80th anniversary of the foundation of the Armenian National Academy of Sciences), Yerevan, Armenia, July 2-8, 2023 (plenary)
+</p>
+
+<p>
+[228]
+Research Seminar, Institute for Informatics, Slovak Academy of Sciences, Bratislava, Slovakia, May 26, 2023 
+</p>
+
+<p>
 [227]
-Research Seminar, Apple Federated Learning Team, Virtual Seminar Series, May 23, 2023 (invited by Vojta Jina) [<a href="talks/TALK-2023-05-23-Apple.pdf">slides</a>]
+Research Seminar, Apple Federated Learning Team, Virtual Seminar Series, May 23, 2023 (invited by Vojta Jína) [<a href="talks/TALK-2023-05-23-Apple.pdf">slides</a>]
 </p>
 
 <p>
