--- a/i_papers.html
+++ b/i_papers.html
@@ -59,7 +59,7 @@
 <br> <br> 
           
           [229] Rafał Szlendak, Elnur Gasanov, and Peter Richtárik<br>
-          <b>Understanding progressive training through the framework of randomized coordinate descent</b><br>
+          <b>Understanding progressive training through the framework of randomized coordinate descent</b><br>          
           [<a href="https://arxiv.org/abs/2306.03626">arXiv</a>] [code: RPT] <br>
           <br> 
           
@@ -143,6 +143,7 @@
 
           [215] Abdurakhmon Sadiev, Marina Danilova, Eduard Gorbunov, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov and Peter Richtárik<br>
           <b>High-probability bounds for stochastic optimization and variational inequalities: the case of unbounded variance</b><br>
+          40th International Conference on Machine Learning (ICML 2023)<br>
           [<a href="https://arxiv.org/abs/2302.00999">arXiv</a>] [code: clipped-SGD, clipped-SSTM, R-clipped-SSTM] <br>
           <br>
 
@@ -200,6 +201,7 @@
 
           [206] Kaja Gruntkowska, Alexander Tyurin and Peter Richtárik<br>
           <b>EF21-P and friends: Improved theoretical communication complexity for distributed optimization with bidirectional compression</b><br>
+          40th International Conference on Machine Learning (ICML 2023)<br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2209.15218">arXiv</a>] [code: EF21-P, EF21-P + DIANA, EF21-P + DCGD]<br>
           <br>
@@ -673,6 +675,7 @@
 
           [136] Ahmed Khaled, Othmane Sebbouh, Nicolas Loizou, Robert M. Gower, and Peter Richtárik <br>
           <b>Unified analysis of stochastic gradient methods for composite convex and smooth optimization</b><br>
+          To appear in: Journal of Optimization Theory and Applications <br>
           [<a href="https://arxiv.org/abs/2006.11573">arXiv</a>] [code: SGD]  <br>
           <br>
 
