--- a/i_talks.html
+++ b/i_talks.html
@@ -82,7 +82,7 @@ Emerging opportunities for statistics and data sciences: data and information in
 
 <p>
 [230]
-<a href="https://www.eeml.eu/home">Eastern European Machine Learning Summer School (EEML 2023)</a>, Košice, Slovakia, July 9-16, 2023 (lecturer)
+<a href="https://www.eeml.eu/home">Eastern European Machine Learning Summer School (EEML 2023)</a>, Košice, Slovakia, July 9-16, 2023 (lecturer) [<a href="slides/TALK-2023-07-11-FL.pdf">slides<a>]
 </p>
 
 <p>
