--- a/i_papers.html
+++ b/i_papers.html
@@ -380,6 +380,7 @@
 
           [179] Haoyu Zhao, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
           <b>Faster rates for compressed federated learning with client-variance reduction</b><br>
+          To appear in: SIAM Journal on Mathematics of Data Science<br>          
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2112.13097">arXiv</a>] [code: COFIG, FRECON] <br>
           <br>
@@ -886,7 +887,7 @@
 
           [105] Aritra Dutta, El Houcine Bergou, Yunming Xiao, Marco Canini and Peter Richtárik<br>
           <b>Direct nonlinear acceleration</b><br>
-          Accepted to EURO Journal on Computational Optimization, 2022 <br>
+          <a href="https://www.sciencedirect.com/science/article/pii/S2192440622000235">EURO Journal on Computational Optimization 10, 2022, 100047</a> <br>
           [<a href="https://arxiv.org/abs/1905.11692">arXiv</a>] [code:
           DNA]<br>
           <br>
