--- a/i_talks.html
+++ b/i_talks.html
@@ -50,7 +50,11 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
-<a href="https://groups.oist.jp/mlss">MLSS 2024</a> The Machine Learning Summer School, Okinawa, Japan, March 4-15, 2024 (invited talk)
+<a href="https://sites.google.com/view/wnopta/home">Workshop on Nonsmooth Optimization and Applications (NOPTA 2024)</a>, in Honor of the 75th Birthday of Boris Mordukhovich, University of Antwerp, Belgium, April 8-13, 2024 (plenary talk)
+</p>
+
+<p>
+<a href="https://groups.oist.jp/mlss">MLSS 2024</a> The Machine Learning Summer School, Okinawa, Japan, March 4-15, 2024 (invited talk - had to decline due to a conflict with another event)
 </p>
 
 <p>
