--- a/i_papers.html
+++ b/i_papers.html
@@ -269,6 +269,7 @@
 
           [196] Rustem Islamov, Xun Qian, Slavomír Hanzely, Mher Safaryan and Peter Richtárik <br>
           <b>Distributed Newton-type methods with communication compression and Bernoulli aggregation</b><br>
+	  Transactions on Machine Learning Research (TMLR 2023) <br>         
           NeurIPS Workshop 2022 (Order up! The Benefits of Higher-Order Optimization in Machine Learning)<br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.03588">arXiv</a>] [code: Newton-3PC, Newton-3PC-BC, Newton-3PC-BC-PP] <br>
