--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@ The deadline for submitting papers to ICLR 2024 passed; my team and I submitted 
 <br> 
 
 
+<h3>October 5, 2023</h3>  
+  
+<h1> A paper accepted to TMLR </h1>
+ 
+The paper 
+
+<ul>
+<li> Rustem Islamov, Xun Qian, Slavomír Hanzely, Mher Safaryan, and Peter Richtárik. Distributed Newton-Type Methods with Communication Compression and Bernoulli Aggregation, <a href="https://arxiv.org/abs/2206.03588">arXiv:2206.03588</a>, 2022,</li>
+</ul>
+was just accepted to <a href="https://openreview.net/forum?id=NekBTCKJ1H">Transactions on Machine Learning Research</a>.
+
+<br>
+        
+ <br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>September 26, 2023</h3>  
   
 <h1> A paper accepted to SIMODS </h1>
