--- a/index.html
+++ b/index.html
@@ -64,6 +64,70 @@ was just accepted to <a href="https://openreview.net/forum?id=NekBTCKJ1H">Transa
 <br> 
 
 
+
+<h3>October 4, 2023</h3>  
+  
+<h1> New VSRP Intern: Timur Kharisov </h1>
+
+
+
+Today we are welcoming <a href="https://www.linkedin.com/in/tkharisov7/">Timur Kharisov</a> to our team as  a new VSRP intern. Timur is studying towards his B.S. degree in Computer Science and Mathematics at the Moscow Institute of Physics and Technology (MIPT), and was recommended by Aleksandr Beznosikov with whom he worked on a research project before. Timur's GPA at the moment is 9.14/10. 
+<br><br>
+
+Timur is simultaneously studying in the Yandex School of Data Science. During an internship at Yandex in 2022, 
+<ul>
+<li>
+he worked in the Quality and Scenarios team at Alice virtual assistant (50+ million monthly users), 
+</li>
+<li>
+debugged the LSTM model and added restoring from the last checkpoint feature,
+</li>
+<li>
+Implemented and released grammars for voice assistant calling scenarios,
+</li>
+<li>
+improved End-To-End overall Alice search app quality by more than 0.4%.
+</li>
+</ul>
+
+In 2020, Timur was a Prize Winner in the Final of the All-Russian National Olympiad in Mathematics.
+As one of the top 5% students at MIPT, he is the recipient of the Abramov Scholarship for Academic Excellence since 2021. Timur's team obtained #1 place (out of 60 teams) in the data engineering "Hack & Change" hackathon in 2021.
+
+<br><br>
+
+In his free time, Timur
+<ul>
+<li>
+acts a member of the Jury at Moscow region stage of All-Russian National Olympiad in Mathematics, 
+</li>
+<li>
+likes teaching/helping school students achieve high results in programming competitions (in the EdTech startup RocketClass),
+</li>
+<li>
+writes NLP code for Automatic Essay Scoring for IELTS writing,
+</li>
+<li>
+writes playable console quest games, and
+</li>
+<li>
+implements template-based STL-like unordered map classes.
+</li>
+</ul>
+
+<br>
+
+Timur, welcome!!!
+<br>
+        
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+ 
+ 
+
+
 <h3>October 3, 2023</h3>
 
 <h1>New Paper</h1>
