--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
 
 
           <h1> Prepared in 2023 </h1>
+      
+          [231] Eduard Gorbunov, Abdurakhmon Sadiev, Marina Danilova, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov, and Peter Richtárik<br>          
+          <b>High-Probability Convergence for Composite and Distributed Stochastic Minimization and Variational Inequalities with Heavy-Tailed Noise</b><br>
+          [<a href="https://arxiv.org/abs/2310.01860">arXiv</a>]           
+<br> <br> 
           
           [230] Egor Shulgin and Peter Richtárik<br>          
           <b>Towards a better theoretical understanding of independent subnetwork training</b><br>
