--- a/i_papers.html
+++ b/i_papers.html
@@ -53,7 +53,7 @@
       
           [231] Eduard Gorbunov, Abdurakhmon Sadiev, Marina Danilova, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov, and Peter Richtárik<br>          
           <b>High-Probability Convergence for Composite and Distributed Stochastic Minimization and Variational Inequalities with Heavy-Tailed Noise</b><br>
-          [<a href="https://arxiv.org/abs/2310.01860">arXiv</a>]           
+          [<a href="https://arxiv.org/abs/2310.01860">arXiv</a>]    [code: DProx-clipped-SGD-shift, DProx-clipped-SSTM-shift]       
 <br> <br> 
           
           [230] Egor Shulgin and Peter Richtárik<br>          
