--- a/i_papers.html
+++ b/i_papers.html
@@ -49,16 +49,22 @@
           <meta charset="utf-8">
 
 
-          <h1> Prepared in 2023 </h1>
-  
-[232] Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>          
-          <b>MARINA meets matrix stepsizes: Variance reduced distributed non-convex optimization</b><br>
-          [<a href="https://arxiv.org/abs/2310.04614">arXiv</a>]    [code: det-MARINA]       
+<h1> Prepared in 2023 </h1>
+
+[233] 
+Ahmad Rammal, Kaja Gruntkowska, Nikita Fedin, Eduard Gorbunov, and Peter Richtárik<br>          
+<b>Communication compression for Byzantine robust learning: New efficient algorithms and improved rates</b><br>
+[<a href="https://arxiv.org/abs/2310.09804">arXiv</a>]    [code: Byz-VR-MARINA, Byz-DASHA-PAGE, Byz-EF21, Byz-EF21-BC]       
 <br> <br> 
 
+[232] 
+Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>          
+<b>MARINA meets matrix stepsizes: Variance reduced distributed non-convex optimization</b><br>
+[<a href="https://arxiv.org/abs/2310.04614">arXiv</a>]    [code: det-MARINA]       
+<br> <br> 
     
 [231] Eduard Gorbunov, Abdurakhmon Sadiev, Marina Danilova, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov, and Peter Richtárik<br>          
-          <b>High-probability convergence for composite and distributed stochastic minimization and variational inequalities with heavy-tailed noise</b><br>
+          <b>High-probability convergence for composite and distributed stochastic minimization and variational inequalities with heavy-tailed noise</b> <br>
           [<a href="https://arxiv.org/abs/2310.01860">arXiv</a>]    [code: DProx-clipped-SGD-shift, DProx-clipped-SSTM-shift]       
 <br> <br> 
           
