--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2310.09804">
 "Communication Compression for Byzantine Robust Learning: New Efficient Algorithms and Improved Rates"</a> -
-joint work with Hanmin Li and Avetik Karagulyan.
+joint work with Ahmad Rammal, Kaja Gruntkowska, Nikita Fedin, and Eduard Gorbunov.
  <br>
   <br>
   
