--- a/i_talks.html
+++ b/i_talks.html
@@ -58,6 +58,10 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+Apple Workshop on Privacy Preserving Machine Learning 2024, Cupertino, California, February 29 -- March 1, 2024 (invited)
+</p>
+
+<p>
 <a href="https://nips.cc/Conferences/2023">NeurIPS 2023</a> Workshop on Federated Learning in the Age of Foundation Models (subject to the workshop being accepted), New Orleans, Louisiana, USA, December 15-16, 2023 (plenary talk)
 </p>
 
