--- a/index.html
+++ b/index.html
@@ -43,6 +43,49 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>November 7, 2023</h3>
+
+<h1>New Doctor in Town!</h1>
+
+<a href="https://slavomir-hanzely.github.io/">Slavomír Hanzely</a> defended his PhD thesis entitled "Adaptive Optimization Algorithms for Machine Learning". Congratulations!!!
+
+<br>
+<br>
+
+Examiners: Eric Moulines, Martin Jaggi, Di Wang, Ajay Jasra and myself.
+  <br>
+  
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>October 25, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2310.16610">
+"Consensus-Based Optimization with Truncated Noise"</a> -
+joint work with Massimo Fornasier, Konstantin Riedl, and Lukang Sun.
+ <br>
+  <br>
+  
+Abstract: <i>Consensus-based optimization~(CBO) is a versatile multi-particle metaheuristic optimization method suitable for performing nonconvex and nonsmooth global optimizations in high dimensions. It has proven effective in various applications while at the same time being amenable to a theoretical convergence analysis. In this paper, we explore a variant of CBO, which incorporates truncated noise in order to enhance the well-behavedness of the statistics of the law of the dynamics. By introducing this additional truncation in the noise term of the CBO dynamics, we achieve that, in contrast to the original version, higher moments of the law of the particle system can be effectively bounded. As a result, our proposed variant exhibits enhanced convergence performance, allowing in particular for wider flexibility in choosing the parameters of the method as we confirm experimentally. By analyzing the time-evolution of the Wasserstein-2 distance between the empirical measure of the interacting particle system and the global minimizer of the objective function, we rigorously prove convergence in expectation of the proposed CBO variant requiring only minimal assumptions on the objective function and on the initialization. Numerical evidences clearly demonstrate the benefit of truncating the noise in CBO.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
 
 <h3>October 15, 2023</h3>
 
@@ -64,6 +107,8 @@ Abstract: <i>Byzantine robustness is an essential feature of algorithms for cert
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
 <br>
 <br> 
+
+
 
 
 
