Lukang Sun paper

--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,12 @@
 
 <h1> Prepared in 2023 </h1>
 
+[234] 
+Massimo Fornasier, Peter Richtárik, Konstantin Riedl, and Lukang Sun<br>          
+<b>Consensus-based optimization with truncated noise</b><br>
+[<a href="https://arxiv.org/abs/2310.16610">arXiv</a>]    [code: CBO]       
+<br> <br> 
+
 [233] 
 Ahmad Rammal, Kaja Gruntkowska, Nikita Fedin, Eduard Gorbunov, and Peter Richtárik<br>          
 <b>Communication compression for Byzantine robust learning: New efficient algorithms and improved rates</b><br>
