--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,12 @@
 
 <h1> Prepared in 2023 </h1>
 
+[235] 
+Grigory Malinovsky, Peter Richtárik, Samuel Horváth, and Eduard Gorbunov<br>          
+<b>Byzantine robustness and partial participation can be achieved simultaneously: just clip gradient differences</b><br>
+[<a href="https://arxiv.org/abs/2311.14127">arXiv</a>]    [code: Byz-VR-MARINA-PP]       
+<br> <br> 
+
 [234] 
 Massimo Fornasier, Peter Richtárik, Konstantin Riedl, and Lukang Sun<br>          
 <b>Consensus-based optimization with truncated noise</b><br>
@@ -240,6 +246,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 
           [204] El Houcine Bergou, Konstantin Burlachenko, Aritra Dutta and Peter Richtárik <br>
           <b>Personalized federated learning with communication compression</b><br>
+          <a href="https://openreview.net/forum?id=dZugyhbNFY">Transactions on Machine Learning Research (TMLR 2023)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2209.05148">arXiv</a>] [code: Compressed L2GD] <br>
           <br>
