--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+
+<h3>November 23, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2311.14127">
+"Byzantine Robustness and Partial Participation Can Be Achieved Simultaneously: Just Clip Gradient Differences"</a> -
+joint work with Grigory Malinovsky, Samuel Horváth, and Eduard Gorbunov.
+ <br>
+  <br>
+  
+Abstract: <i> Distributed learning has emerged as a leading paradigm for training large machine learning models. However, in real-world scenarios, participants may be unreliable or malicious, posing a significant challenge to the integrity and accuracy of the trained models. Byzantine fault tolerance mechanisms have been proposed to address these issues, but they often assume full participation from all clients, which is not always practical due to the unavailability of some clients or communication constraints. In our work, we propose the first distributed method with client sampling and provable tolerance to Byzantine workers. The key idea behind the developed method is the use of gradient clipping to control stochastic gradient differences in recursive variance reduction. This allows us to bound the potential harm caused by Byzantine workers, even during iterations when all sampled clients are Byzantine. Furthermore, we incorporate communication compression into the method to enhance communication efficiency. Under quite general assumptions, we prove convergence rates for the proposed method that match the existing state-of-the-art (SOTA) theoretical results. </i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+<h3>November 11, 2023</h3>
+
+<h1>External PhD Examiner for Paul Magold</h1>
+
+Today I attended the PhD defense of <a href="http://pmangold.fr">Paul Mangold</a> as an external examiner. He successfully defended his PhD thesis at Inria Lille under the supervision of  Aurélien Bellet, Marc Tommasi, and Joseph Salmon.
+<br>
+
+  
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>November 7, 2023</h3>
 
 <h1>New Doctor in Town!</h1>
