--- a/i_papers.html
+++ b/i_papers.html
@@ -51,9 +51,31 @@
 
 <h1> Prepared in 2023 </h1>
 
+
+[238] 
+Jihao Xin, Ivan Ilin, Shunkang Zhang, Marco Canini, Peter Richtárik<br>          
+<b>Kimad: Adaptive gradient compression with bandwidth awareness</b><br>
+<a href="https://dl.acm.org/doi/abs/10.1145/3630048.3630184">Proceedings of the 4th International Workshop on Distributed Machine Learning</a> <br>
+<span class="important">Federated Learning Paper</span><br> 
+[arXiv]    <br> <br> 
+
+[237] 
+Konstantin Burlachenko, Abdulmajeed Alrowithi, Fahad Ali Albalawi, and Peter Richtárik<br>          
+<b>Federated learning is better with non-homomorphic encryption</b><br>
+<a href="https://dl.acm.org/doi/10.1145/3630048.3630182">Proceedings of the 4th International Workshop on Distributed Machine Learning</a> <br>
+<span class="important">Federated Learning Paper</span><br> 
+[<a href="https://arxiv.org/abs/2312.02074">arXiv</a>]    <br> <br> 
+
+[236] 
+Yury Demidovich, Grigory Malinovsky, Egor Shulgin, and Peter Richtárik<br>          
+<b>MAST: model-agnostic sparsified training</b><br>
+          <span class="important">Federated Learning Paper</span><br> 
+[<a href="https://arxiv.org/abs/2311.16086">arXiv</a>]    <br> <br> 
+
 [235] 
 Grigory Malinovsky, Peter Richtárik, Samuel Horváth, and Eduard Gorbunov<br>          
 <b>Byzantine robustness and partial participation can be achieved simultaneously: just clip gradient differences</b><br>
+          <span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/2311.14127">arXiv</a>]    [code: Byz-VR-MARINA-PP]       
 <br> <br> 
 
@@ -66,12 +88,14 @@ Massimo Fornasier, Peter Richtárik, Konstantin Riedl, and Lukang Sun<br>
 [233] 
 Ahmad Rammal, Kaja Gruntkowska, Nikita Fedin, Eduard Gorbunov, and Peter Richtárik<br>          
 <b>Communication compression for Byzantine robust learning: New efficient algorithms and improved rates</b><br>
+          <span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/2310.09804">arXiv</a>]    [code: Byz-VR-MARINA, Byz-DASHA-PAGE, Byz-EF21, Byz-EF21-BC]       
 <br> <br> 
 
 [232] 
 Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>          
 <b>MARINA meets matrix stepsizes: Variance reduced distributed non-convex optimization</b><br>
+<span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/2310.04614">arXiv</a>]    [code: det-MARINA]       
 <br> <br> 
     
