--- a/index.html
+++ b/index.html
@@ -44,6 +44,86 @@
         <div id="content">
 
 
+
+<h3>December 1, 2023</h3>  
+  
+<h1> New VS Intern: Anh Duc Nguyen </h1>
+
+<a href="https://www.linkedin.com/in/anh-duc-nguyen-8a3857159/?originalSubdomain=sg">Anh Duc Nguyen</a> just joined my team as a  VS intern who will be with us in a remote capacity for three months, starting today. Anh Duc is studying towards a BSc (honors) in Mathematics & Data Science at the National University of Singapore.
+<br><br>
+
+He attends a special program in mathematics, designed for students with strong passion and high aptitude in mathematics. The courses he took at NUS include:
+<ul>
+<li>
+Bayesian Statistics and Machine Learning,
+</li>
+<li>
+Theory and Algorithms for Online Learning,
+</li>
+<li>
+Advanced Mathematical Programming,
+</li>
+<li>
+Stochastic Processes and Algorithms, and
+</li>
+<li>
+Trustworthy Machine Learning.
+</li>
+</ul>
+
+<br>
+
+Anh Duc conducted undergraduate research on
+<ul>
+<li>
+robust satisficing with Melvyn Sim,
+</li>
+<li>
+distributed methods for variational inequalities with Volkan Cevher and Kimon Antonakopoulos at EPFL during Summer 2023 (a first-author paper is being prepared), and
+</li>
+<li>
+accelerated stochastic gradient and dual extrapolation methods for partial optimal transport with Kim-Chuan Toh (the paper is under review. for this he was awarded the Outstanding Undergraduate Research Prize at NUS).
+</li>
+</ul>
+
+<br>
+
+Anh Duc was on Dean's List recently, which means he was among the top 5% students at the NUS Faculty of Science.
+In July 2021, he attended (remotely due to Covid 19) "Mathematical Summer in Paris" at Uni Paris-Saclay, listening to lectures on topics ranging from algebraic number theory to data analysis. He is the project director of NUS Mathematics Society (coordinating events such as Singapore Cube Championship and Problemathic - NUS Math Olympiad by and for students), and is the Vice President of NUS CAC Fingerstyle (a fingerstyle guitar enthusiasts club at NUS).
+<br>
+        
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+
+<h3>November 30, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2311.16086">
+"MAST: Model-Agnostic Sparsified Training"</a> -
+joint work with Yury Demidovich, Grigory Malinovsky, and Egor Shulgin.
+ <br>
+  <br>
+  
+Abstract: <i> We introduce a novel optimization problem formulation that departs from the conventional way of minimizing machine learning model loss as a black-box function. Unlike traditional formulations, the proposed approach explicitly incorporates an initially pre-trained model and random sketch operators, allowing for sparsification of both the model and gradient during training. We establish insightful properties of the proposed objective function and highlight its connections to the standard formulation. Furthermore, we present several variants of the Stochastic Gradient Descent (SGD) method adapted to the new problem formulation, including SGD with general sampling, a distributed version, and SGD with variance reduction techniques. We achieve tighter convergence rates and relax assumptions, bridging the gap between theoretical principles and practical applications, covering several important techniques such as Dropout and Sparse training. This work presents promising opportunities to enhance the theoretical understanding of model training through a sparsification-aware optimization approach. </i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>November 23, 2023</h3>
 
 <h1>New Paper</h1>
