--- a/i_papers.html
+++ b/i_papers.html
@@ -265,6 +265,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 
           [205] Soumia Boucherouite, Grigory Malinovsky, Peter Richtárik and El Houcine Bergou<br>
           <b>Minibatch stochastic three points method for unconstrained smooth minimization</b><br>
+          <a href="">38th AAAI Conference on Artificial Intelligence (AAAI 2024)</a> <br>
           [<a href="https://arxiv.org/abs/2209.07883">arXiv</a>] [code: MiSTP] <br>
           <br>
 
