--- a/i_papers.html
+++ b/i_papers.html
@@ -57,7 +57,7 @@ Jihao Xin, Ivan Ilin, Shunkang Zhang, Marco Canini, Peter Richtárik<br>
 <b>Kimad: Adaptive gradient compression with bandwidth awareness</b><br>
 <a href="https://dl.acm.org/doi/abs/10.1145/3630048.3630184">Proceedings of the 4th International Workshop on Distributed Machine Learning</a> <br>
 <span class="important">Federated Learning Paper</span><br> 
-[<a href="https://arxiv.org/abs/2312.08053">arXiv<a>]    <br> <br> 
+[<a href="https://arxiv.org/abs/2312.08053">arXiv</a>]    <br> <br> 
 
 [237] 
 Konstantin Burlachenko, Abdulmajeed Alrowithi, Fahad Ali Albalawi, and Peter Richtárik<br>          
