--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2312.08053">
 "Kimad: Adaptive Gradient Compression with Bandwidth Awareness"</a> -
-joint work with Konstantin Burlachenko, Abdulmajeed Alrowithi, and Fahad Ali Albalawi.
- <br>
+joint work with Jihao Xin, Ivan Ilin, Shunkang Zhang, and Marco Canini. <br>
   <br>
   
 Abstract: <i> In distributed training, communication often emerges as a bottleneck. In response, we introduce Kimad, a solution that offers adaptive gradient compression. By consistently monitoring bandwidth, Kimad refines compression ratios to match specific neural network layer requirements. Our exhaustive tests and proofs confirm Kimad's outstanding performance, establishing it as a benchmark in adaptive compression for distributed deep learning. </i>
