CS Graduate Seminar

--- a/i_talks.html
+++ b/i_talks.html
@@ -50,11 +50,19 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+Federated Learning for Computer Vision (FedVision) Workshop at CVPR 2024, Seattle, USA, June 17-18, 2024 (keynote talk)
+</p>
+
+<p>
 One World Optimization Seminar in Vienna, Erwin Schrödinger International Institute for Mathematics and Physics, Vienna, Austria, June 3-7, 2024 (invited)
 </p>
 
 <p>
 <a href="https://sites.google.com/view/wnopta/home">Workshop on Nonsmooth Optimization and Applications (NOPTA 2024)</a>, in Honor of the 75th Birthday of Boris Mordukhovich, University of Antwerp, Belgium, April 8-13, 2024 (plenary talk)
+</p>
+
+<p>
+CS Graduate Seminar, KAUST, Thuwal, Saudi Arabia, March 18, 2024 (invited)
 </p>
 
 <p>
