update of 3 ICLR 2024 papers

--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,19 @@
 
 <h1> Prepared in 2023 </h1>
 
+[240] 
+Kai Yi, Nidham Gazagnadou, Peter Richtárik, and Lingjuan Lyu<br>
+<b>FedP3: Personalized and privacy-friendly federated network pruning under model heterogeneity</b><br>
+12th International Conference on Learning Representations (ICLR 2024) <br>
+<span class="important">Federated Learning Paper</span><br>          
+[arXiv] [code: FedP3] <br><br> 
+          
+[239] 
+Peter Richtárik, Elnur Gasanov, Konstantin Burlachenko<br>
+<b>Error feedback reloaded: From quadratic to arithmetic mean of smoothness constants</b><br>
+12th International Conference on Learning Representations (ICLR 2024) <br>
+<span class="important">Federated Learning Paper</span><br>          
+[arXiv] [code: EF21-W, EF21] <br> <br>   
 
 [238] 
 Jihao Xin, Ivan Ilin, Shunkang Zhang, Marco Canini, Peter Richtárik<br>          
@@ -174,6 +187,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           
           [219] Hanmin Li, Avetik Karagulyan and Peter Richtárik<br>
           <b>Det-CGD: Compressed gradient descent with matrix stepsizes for non-convex optimization</b><br>
+          12th International Conference on Learning Representations (ICLR 2024) <br>
           <span class="important">Federated Learning Paper</span><br>          
           [<a href="https://arxiv.org/abs/2305.12568">arXiv</a>] [code: Det-CGD] <br>
           <br>   
