--- a/i_talks.html
+++ b/i_talks.html
@@ -74,7 +74,7 @@ Apple Workshop on Privacy Preserving Machine Learning 2024, Cupertino, Californi
 </p>
 
 <p>
-<a href="https://nips.cc/Conferences/2023">NeurIPS 2023</a> Workshop on Federated Learning in the Age of Foundation Models (subject to the workshop being accepted), New Orleans, Louisiana, USA, December 15-16, 2023 (plenary talk)
+Three 50 min lectures on Optimization for Machine Learning, AMCS-STAT School, KAUST, Saudi Arabia, February 25, 2024 (invited)
 </p>
 
 <!-- <p>
@@ -89,6 +89,11 @@ Apple Workshop on Privacy Preserving Machine Learning 2024, Cupertino, Californi
 !-->
 
 <h1>2023 Talks</h1>
+
+<p>
+[233]
+<a href="https://nips.cc/Conferences/2023">NeurIPS 2023</a> Workshop on Federated Learning in the Age of Foundation Models (subject to the workshop being accepted), New Orleans, Louisiana, USA, December 15-16, 2023 (plenary talk)
+</p>
 
 <p>
 [232]
