--- a/i_papers.html
+++ b/i_papers.html
@@ -359,7 +359,8 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           <br>
 
           [193] Lukang Sun, Adil Salim and Peter Richtárik<br>
-          <b>Federated learning with a sampling algorithm under isoperimetry</b><br>
+          <b>Federated sampling with Langevin algorithm under isoperimetry</b><br>
+	  Transactions on Machine Learning Research (TMLR 2024) <br>          
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.00920">arXiv</a>] [code: Langevin-Marina] <br>
           <br>
