--- a/i_papers.html
+++ b/i_papers.html
@@ -48,13 +48,21 @@
           <br>
           <meta charset="utf-8">
 
+<h1> Prepared in 2024 </h1>
+
+[241] 
+Alexander Tyurin, Marta Pozzi, Ivan Ilin, and Peter Richtárik<br>
+<b>Shadowheart SGD: Distributed asynchronous SGD with optimal time complexity under arbitrary computation and communication heterogeneity</b><br>
+<span class="important">Federated Learning Paper</span><br>          
+[<a href="https://arxiv.org/abs/2402.04785">arXiv</a>] [code: Shadowheart SGD] <br><br> 
+
 
 <h1> Prepared in 2023 </h1>
 
 [240] 
 Kai Yi, Nidham Gazagnadou, Peter Richtárik, and Lingjuan Lyu<br>
 <b>FedP3: Personalized and privacy-friendly federated network pruning under model heterogeneity</b><br>
-12th International Conference on Learning Representations (ICLR 2024) <br>
+<a href="https://openreview.net/forum?id=hbHwZYqk9T">12th International Conference on Learning Representations (ICLR 2024)</a> <br>
 <span class="important">Federated Learning Paper</span><br>          
 [arXiv] [code: FedP3] <br><br> 
           
