--- a/index.html
+++ b/index.html
@@ -44,6 +44,77 @@
         <div id="content">
 
 
+
+<h3>February 7, 2024</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2402.04785">
+"Shadowheart SGD: Distributed Asynchronous SGD with Optimal Time Complexity Under Arbitrary Computation and Communication Heterogeneity"</a> -
+joint work with Alexander Tyurin, Marta Pozzi, and Ivan Ilin.
+ <br>
+ <br>
+  
+Abstract: <i> We consider nonconvex stochastic optimization problems in the asynchronous centralized distributed setup where the communication times from workers to a server can not be ignored, and the computation and communication times are potentially different for all workers. Using an unbiassed compression technique, we develop a new method---Shadowheart SGD---that provably improves the time complexities of all previous centralized methods. Moreover, we show that the time complexity of Shadowheart SGD is optimal in the family of centralized methods with compressed communication. We also consider the bidirectional setup, where broadcasting from the server to the workers is non-negligible, and develop a corresponding method. </i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+<h3>February 4, 2024</h3>
+
+<h1>Four New Research Interns</h1>
+
+Several research interns joined my team in January/February: 
+<ul>
+<li>
+Kirill Acharya (Moscow Institute of Physics and Technology),
+</li>
+<li>
+Robin Yadav (University of British Columbia),
+</li>
+<li>
+Dymitr Lubczyk (Amsterdam),
+</li>
+<li>
+Simone Maria Giancola (Bocconi University).
+</li>
+</ul>
+
+Welcome!
+
+<br>
+  
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+<h3>February 3, 2024</h3>
+
+<h1>ICML 2024 deadline</h1>
+
+ICML 2024 paper submission deadline is over; all who submitted a paper deserve some rest!
+
+<br>
+  
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
 <h3>December 13, 2023</h3>
 
 <h1>New Paper</h1>
